[package]
name = "pvc-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
eframe = "0.24.1"
egui = "0.24.1"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
webbrowser = "0.8.13"
